# awesome-catalogs

./: .gitignore  CREATOR_FEEDBACK.md  LICENSE  README.md  SKILL.md  pyproject.toml
awesome_catalogs/: __init__.py  activity.py  catalog.py  classifier.py  cli.py  evaluate.py  installer.py  models.py  stars.py
catalogs/: CATALOG.md  PLUGINS_CATALOG.md  SCRIPTS_CATALOG.md  SKILLS_CATALOG.md  SOFTWARE_CATALOG.md  TOOLS_CATALOG.md
references/: classifier.md  upgrade-roadmap.md
scripts/: install.sh
skill-catalog-maintainer/: SKILL.md
skill-workflow/: SKILL.md
skill-workflow/references/: absorbed-patterns.md
tests/: test_classifier.py  test_stars.py
