[project]
name = "awesome-catalogs"
version = "1.4.0"
description = "Classify GitHub repos, install them into Claude-friendly folders, and maintain Markdown catalogs."
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
awesome = "awesome_catalogs.cli:main"

[tool.setuptools.packages.find]
include = ["awesome_catalogs*"]
